# spotify-mcp-server

./: .env.example  .gitignore  .mcp-todos.json  COMMIT_MESSAGE.md  LICENSE  README.md  RELEASE_NOTES.md  SECURITY_ANALYSIS.md  fastmcp_github_main.py  fastmcp_main.py  github_oauth_config.example  github_oauth_template.env  minimal_test.py  pyproject.toml  requirements-secure.txt  requirements-stable.txt  requirements.txt  run-mcp-server.sh  simple_fastmcp_main.py  stable_fastmcp_main.py  test-config.json  test_entrypoint.py
.cursor/rules/: 02-my-custom-rules.mdc
docs/: building-spotify-mcp-server-with-cursor.md  cache-configuration.md  deployment-security-checklist.md  fastmcp-cloud-authenticated-deployment.md  fastmcp-cloud-deployment.md  hostinger-deployment-guide.md  security-guide.md  specifications.md
scripts/: security-check.py
src/spotify_mcp_server/: __init__.py  auth.py  cache.py  config.py  config_security.py  dependency_security.py  main.py  middleware.py  network_security.py  resources.py  secure_errors.py  server.py  server_with_github_auth.py  session_manager.py  spotify_client.py  token_manager.py  tools.py  user_context.py  validation.py
tests/: __init__.py  test_auth.py  test_cache.py  test_cache_integration.py  test_cache_performance.py  test_config.py  test_integration.py  test_integration_middleware.py  test_middleware.py  test_server.py  test_spotify_client.py  test_tools.py
